# ChatWeaver

./: LICENSE  README.md  build.bat  chatweaver-0.2.0-py3-none-any.whl  flowchart.toml  publish - testpypi.bat  publish.bat  pyproject.toml
src/chatweaver/: Bot.py  BotGenerationResult.py  CWArchive.py  Chat.py  MetadataContainer.py  Model.py  Schema.py  TextNode.py  __init__.py  archive.py  bot.py  bot_completion_result.py  chat.py  helpers.py  metadata_container.py  model.py  schema.py  text_node.py
src/chatweaver/data/: __init__.py  models.py  system_rules.py
