[project]
name = "chatweaver"
version = "1.2.1"
description = "A Python library that simplifies building AI-driven chatbots with OpenAI, offering conversation management, file attachments, structured outputs, and persistent storage in one cohesive package."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENCE"]
authors = [
    { name = "Cecchelani Diego", email = "ceccdieg@gmail.com" },
]
keywords = [
    "ai",
    "chatbot",
    "chat-completions",
    "openai",
    "conversation",
    "structured-output",
]
dependencies = [
    "openai>=2.3.0,<3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://www.chatweaver.net"


[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["chatweaver*"]
namespaces = false
